crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__complex_newline_preservation-5.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: result
snapshot_kind: text
---
<file_content path="/var/folders/v4/ww1bj4dn2ml3k1xrmfgx8sv80000gn/T/.tmpCmIUF2/test.txt">



// New header



function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}



// Updated footer
</file_content>
