crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__fuzzy_search_advanced-3.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: result
snapshot_kind: text
---
<file_content path="/var/folders/v4/ww1bj4dn2ml3k1xrmfgx8sv80000gn/T/.tmpKlPy3Y/test.txt">
class UserManager {
  async findUser(id, options = {}) {
    const user = await this.db.findOne({ userId: id, ...options });
    if (!user) {
      throw new UserNotFoundError(id);
    }
    return this.sanitizeUser(user);
  }
}
</file_content>
