crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__multiple_blocks.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: result
snapshot_kind: text
---
<file_content path="/var/folders/v4/ww1bj4dn2ml3k1xrmfgx8sv80000gn/T/.tmpU29mVJ/test.txt">
    New First    
  Middle Line  
    New Last
</file_content>
